JumpScript/tests/baselines/reference/bases.errors.txt
tests/cases/compiler/bases.jump(7,14): error TS2339: Property 'y' does not exist on type 'B'.
tests/cases/compiler/bases.jump(7,15): error TS1005: ';' expected.
tests/cases/compiler/bases.jump(7,17): error TS2693: 'any' only refers to a type, but is being used as a value here.
tests/cases/compiler/bases.jump(11,7): error TS2420: Class 'C' incorrectly implements interface 'I'.
  Property 'x' is missing in type 'C'.
tests/cases/compiler/bases.jump(12,5): error TS2377: Constructors for derived classes must contain a 'super' call.
tests/cases/compiler/bases.jump(13,9): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/compiler/bases.jump(13,14): error TS2339: Property 'x' does not exist on type 'C'.
tests/cases/compiler/bases.jump(13,15): error TS1005: ';' expected.
tests/cases/compiler/bases.jump(13,17): error TS2693: 'any' only refers to a type, but is being used as a value here.
tests/cases/compiler/bases.jump(17,9): error TS2339: Property 'x' does not exist on type 'C'.
tests/cases/compiler/bases.jump(18,9): error TS2339: Property 'y' does not exist on type 'C'.


==== tests/cases/compiler/bases.jump (11 errors) ====
    interface I {
        x;
    }
    
    class B {
        constructor() {
            this.y: any;
                 ~
!!! error TS2339: Property 'y' does not exist on type 'B'.
                  ~
!!! error TS1005: ';' expected.
                    ~~~
!!! error TS2693: 'any' only refers to a type, but is being used as a value here.
        }
    }
    
    class C extends B implements I {
          ~
!!! error TS2420: Class 'C' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'x' is missing in type 'C'.
        constructor() {
        ~~~~~~~~~~~~~~~
            this.x: any;
    ~~~~~~~~~~~~~~~~~~~~
            ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
                 ~
!!! error TS2339: Property 'x' does not exist on type 'C'.
                  ~
!!! error TS1005: ';' expected.
                    ~~~
!!! error TS2693: 'any' only refers to a type, but is being used as a value here.
        }
    ~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
    }
    
    new C().x;
            ~
!!! error TS2339: Property 'x' does not exist on type 'C'.
    new C().y;
            ~
!!! error TS2339: Property 'y' does not exist on type 'C'.
    
    